fixes for trophy page

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -10,17 +10,17 @@
           Individual
         %ul.trophypage
           %li#sightseeing
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/sightseeing.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
             %span
               Sightseeing tour: finish a game in all variants (die or ascend)
             
           %li#globetrotter
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/globetrotter.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/globetrotter.png"}
             %span
               Globetrotter: get a trophy for each variant
             
           %li#king
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/king.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/king.png"}
             %span
               King of the world: ascend in all variants
         .text_content.non_top_post
@@ -31,56 +31,56 @@
           1.3d). Each is worth one point.
         %ul.trophypage
           %li#all-conducts
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/all-conducts.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-conducts.png"}
             %span
               All conducts: follow each conduct in at least one ascension.
           %li#streak-conducts.multiline
-            %img{:style => "width:5%;height:5%", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-conducts.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/streak-conducts.png"}
             %span
               All conducts (in a streak): follow each conduct in at least one
               ascension, with all the ascensions belonging to the same streak.
           %li#all-roles
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/all-roles.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-roles.png"}
             %span
               All roles: ascend a character for each role.
           %li#streak-roles
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-roles.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/streak-roles.png"}
             %span
               All roles (in a streak): ascend a character for each role in the
               same streak.
             
           %li#all-races
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/all-races.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-races.png"}
             %span
               All races: ascend a character of every race.
             
           %li#streak-races
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-races.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/streak-races.png"}
             %span
               All races (in a streak): ascend a character of every race in the
               same streak.
           %li#all-alignments
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/all-alignments.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-alignments.png"}
             %span
               All alignments: ascend a character of every alignment (the starting
               alignment is considered).
           %li#streak-alignments.multiline
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-alignments.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/streak-alignments.png"}
             %span
               All alignments (in a streak): ascend a character of every alignment
               in the same streak (the starting alignment is considered).
           %li#all-genders
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/all-genders.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-genders.png"}
             %span
               All genders: ascend a character of each gender (the starting gender
               is considered).
           %li#streak-genders
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/streak-genders.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/streak-genders.png"}
             %span
               All genders (in a streak): ascend a character of each gender (the
               starting gender is considered).
           %li#ascension
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/ascension.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/ascension.png"}
             %span
               Ascension: ascend a character.
           %li#m-soko
@@ -88,47 +88,47 @@
             point):
             %ul.trophypage{:style => "margin-left: 2em;"}
               %li
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-soko.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-soko.png"}
                 %span
                   get the Sokoban prize
               %li#m-luckstone
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-luckstone.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-luckstone.png"}
                 %span
                   get the luckstone from Mines' End
               %li#m-bell
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-bell.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-bell.png"}
                 %span
                   get the Bell of Opening
               %li#m-medusa
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-medusa.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-medusa.png"}
                 %span
                   defeat Medusa
               %li#m-gehennom
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-gehennom.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-gehennom.png"}
                 %span
                   enter Gehennom
               %li#m-candelabrum
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-candelabrum.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-candelabrum.png"}
                 %span
                   get the Candelabrum of the Invocation
               %li#m-book
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-book.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-book.png"}
                 %span
                   get the Book of the Dead
               %li#m-invocation
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-invocation.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-invocation.png"}
                 %span
                   complete the invocation ritual
               %li#m-amulet
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-amulet.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-amulet.png"}
                 %span
                   get the Amulet of Yendor
               %li#m-planes
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-planes.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-planes.png"}
                 %span
                   enter the elemental planes
               %li#m-astral
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-astral.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-astral.png"}
                 %span
                   enter the Astral Plane
         .text_content.non_top_post
@@ -136,31 +136,31 @@
           AceHack and UnNetHack
         %ul.trophypage
           %li#m-croesus
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-croesus.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-croesus.png"}
             %span
               Assault on Fort Knox: defeat Croesus
           %li#m-sam
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-sam.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-sam.png"}
             %span
               No membership card: defeat One-Eyed Sam (UnNetHack only)
           %li#m-no-nemesis
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-nemesis.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-nemesis.png"}
             %span
               Too good for quests: ascend without defeating the quest nemesis
           %li#m-no-vlad
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-vlad.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-vlad.png"}
             %span
               Too good for Vladbanes: ascend without defeating Vlad
           %li#m-no-wizard
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-wizard.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-wizard.png"}
             %span
               Too good for... wait, what? How?: ascend without defeating Rodney
           %li#m-no-cthulhu
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-no-cthulhu.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-cthulhu.png"}
             %span
               Too good for a brain: ascend without defeating Cthulhu (UnNetHack only)
           %li#m-hoarder
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/m-hoarder.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-hoarder.png"}
             %span
               Hoarder: ascend carrying all the invocation items
         .text_content.non_top_post
@@ -168,23 +168,23 @@
           Nethack 1.3d
         %ul.trophypage
           %li#old-ascension
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-ascension.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-ascension.png"}
             %span 
               Ascension: ascend a character.
           %li
             Achievement trophy (each subtrophy is worth an equal fraction of a
             point):
-            %ul 
+            %ul.trophypage{:style => "margin-left: 2em;"} 
               %li#old-crowned
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-crowned.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-crowned.png"}
                 %span
                   get crowned
               %li#old-hell
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-hell.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-hell.png"}
                 %span
                   enter Hell
               %li#old-wizard
-                %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/old-wizard.png"}
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/old-wizard.png"}
                 %span
                   defeat Rodney
         .text_content.non_top_post
@@ -199,31 +199,31 @@
           player's score) swapping for fastest ascension and lowest score.
         %ul.trophypage
           %li#c-most-ascensions
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-most-ascensions.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-ascensions.png"}
             %span
               Most ascensions
           %li#c-longest-streak
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-longest-streak.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-longest-streak.png"}
             %span
               Longest ascension streak
           %li#c-fastest-gametime
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-fastest-gametime.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-gametime.png"}
             %span
               Fastest ascension (gametime)
           %li#c-fastest-realtime
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-fastest-realtime.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-realtime.png"}
             %span
               Fastest ascension (realtime)
           %li#c-highest-score
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-highest-score.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-highest-score.png"}
             %span
               Highest scoring ascension
           %li#c-lowest-score
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-lowest-score.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-lowest-score.png"}
             %span
               Lowest scoring ascension (modulo depth)
           %li#c-most-conducts
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/c-most-conducts.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-conducts.png"}
             %span
               Most conducts in a single ascension
         .text_content.non_top_post
@@ -231,19 +231,19 @@
           Clan Competitions
         %ul.trophypage
           %li#clan-24h
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-24h.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-24h.png"}
             %span
               Most ascensions in a 24 hour period
           %li#clan-combinations
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-combinations.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-combinations.png"}
             %span
               Most ascended variant/role/race/alignment/gender combinations (starting)
           %li#clan-points
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-points.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-points.png"}
             %span
               Most points
           %li#clan-deaths
-            %img{:style => "width:5%;height:5%;vertical-align:middle", :alt => "All Conducts Logo", :width => "5%", :height => "5%", :src => "/icons/clan-deaths.png"}
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-deaths.png"}
             %span
               Most unique deaths
         .text_content.non_top_post
