Add user page (/user/name), add title attribute to trophy previews. Add alternate AceHack requirements in paren by vanilla on trophy.

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -84,21 +84,25 @@
             %span
               Ascension: ascend a character.
           %li#m-soko
-            Achievement trophy (each subtrophy is worth an equal fraction of a
-            point):
+            %p
+              Achievement trophy (each subtrophy is worth an equal fraction of a
+              point):
+            For AceHack, the requirements are sometimes different. When
+            applicable this is noted in parentheses next to the vanilla
+            requirement.
             %ul.trophypage{:style => "margin-left: 2em;"}
               %li
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-soko.png"}
                 %span
-                  get the Sokoban prize
+                  get the Sokoban prize (get an Oracle consultation)
               %li#m-luckstone
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-luckstone.png"}
                 %span
-                  get the luckstone from Mines' End
+                  get the luckstone from Mines' End (get accepted to quest)
               %li#m-bell
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-bell.png"}
                 %span
-                  get the Bell of Opening
+                  get the Bell of Opening (defeat the quest nemesis)
               %li#m-medusa
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-medusa.png"}
                 %span
@@ -106,15 +110,15 @@
               %li#m-gehennom
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-gehennom.png"}
                 %span
-                  enter Gehennom
+                  enter Gehennom (enter Gehennom the front way)
               %li#m-candelabrum
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-candelabrum.png"}
                 %span
-                  get the Candelabrum of the Invocation
+                  get the Candelabrum of the Invocation (defeat Vlad)
               %li#m-book
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-book.png"}
                 %span
-                  get the Book of the Dead
+                  get the Book of the Dead (defeat Rodney at least once)
               %li#m-invocation
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-invocation.png"}
                 %span
@@ -122,7 +126,7 @@
               %li#m-amulet
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-amulet.png"}
                 %span
-                  get the Amulet of Yendor
+                  get the Amulet of Yendor (defeat the High Priest of Moloch)
               %li#m-planes
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-planes.png"}
                 %span
