--- a/views/home.haml
+++ b/views/home.haml
@@ -40,7 +40,7 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "3.6.0"
-                            %a{:href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
             - unless @user.scoreentries.select{|entry| entry.variant == "3.4.3"}.empty?
                 %li
@@ -48,7 +48,7 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "3.4.3"
-                            %a{:href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
             - unless @user.scoreentries.select{|entry| entry.variant == "UNH-3.5.4"}.empty?
                 %li
@@ -56,7 +56,7 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "UNH-3.5.4"
-                            %a{:href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
             - unless @user.scoreentries.select{|entry| entry.variant == "0.6.3"}.empty?
                 %li
@@ -64,7 +64,7 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "0.6.3"
-                            %a{:href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
             - unless @user.scoreentries.select{|entry| entry.variant == "NH-1.3d"}.empty?
                 %li
@@ -72,7 +72,7 @@
                 %p
                     - for scoreentry in @user.scoreentries
                         - if scoreentry.variant == "NH-1.3d"
-                            %a{:href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
+                            %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
         =haml :_user_games
         #clanmanager.text_content.non_top_post
