add xiella's server page, add individual server page (/server/abbrev) link server page from servers page, add links to pages from places add variant field to server_list

--- a/views/about.haml
+++ b/views/about.haml
@@ -12,6 +12,10 @@
         You can check out tournament rules from the
         %a{:href => "/rules"} rules page.
       %p
+        There is a list of available trophies and competitions
+        on the
+        %a{:href => "/trophies"} trophies page.
+      %p
         This tournament utilizes existing public NetHack servers, such as
         %a{:href => "http://alt.org/nethack"} nethack.alt.org.
         There are servers in both sides of the Atlantic for low latencies.
