--- a/views/rules.haml
+++ b/views/rules.haml
@@ -56,6 +56,10 @@
           Achievement trophies yield equal fractions of a point according
           to how many achievements were obtained in the whole tournament.
         %p
+          You can view a list of the available trophies and competitions
+          %a{:href => "/trophies"}
+            here.
+        %p
           Cross-variant trophies ignore NetHack 1.3d; the "Sightseeing
           Tour" trophy requires a game from each variant to be played for at
           least 2000 turns, or to finish with an ascension; the "Globetrotter"
