--- a/views/splash.haml
+++ b/views/splash.haml
@@ -18,7 +18,17 @@
         Then play NetHack.
       %p
         And also play in the NetHack Summer tournament.
+    .text_content.non_top_post
       %p
+        You can view the tournament rules at the 
+        %a{:href => "/rules"} Rules page.
+      %p
+        You can view the competitions and trophies up for grabs at the
+        %a{:href => "/trophies"} Trophies page.
+      %p
+        Games played on the servers listed on the
+        %a{:href => "/servers"} Servers page
+        are eligible for the tournament.
     .text_content.non_top_post
       %h2
         Huh?
