--- a/views/home.haml
+++ b/views/home.haml
@@ -4,7 +4,7 @@
             - server_accounts = (Server.all - @user.servers)
             - if server_accounts.size > 0
                 #greeting
-                    = "Hi #{h @user.login}, to have your games on one of the <a href='public_servers_TODO'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{@tournament_identifier}</tt><br/> to your options file on the public server and enter your public server account name (case-sensitive) into the form below."
+                    = "Hi #{h @user.login}, to have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{@tournament_identifier}</tt><br/> to your options file on the public server and enter your public server account name (case-sensitive) into the form below."
             %form{ :action => "/add_server_account", :method => "post"}
                 %table#accountlist
                     %tr
