Autofocus on username text field

--- a/views/login.haml
+++ b/views/login.haml
@@ -5,7 +5,7 @@
         %fieldset
           #username_row
             %label{:for => "username"} Username:
-            %input#username{:name => "username", :type => "textbox", :value => ""}/
+            %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => ""}/
             .form_msg
               Field required
             %span.clear
