fix url in server.haml

--- a/views/server.haml
+++ b/views/server.haml
@@ -4,7 +4,7 @@
       %h2
         #{h @server.name} - a #{h @server.variant} server @ #{h @server.url}
       %h3
-        Url: #{h @server.name}
+        Url: #{h @server.url}
       %h3
         Variant: #{h @server.variant}
     .text_content.non_top_post
