temporarily disable scoreboard

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -21,7 +21,7 @@
               - if @logged_in then
                 %a{:href => "/login"} Login
             %li
-              %a{:href => "/scoreboard"} Scoreboard
+              %a{:href => "/trophies"} Trophies
             %li
               - if !@logged_in then
                 %a{:href => "/logout"} Logout
