Removed a.bigred. Suggestion for how login can have a register link.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -560,3 +560,13 @@ table#servers th {
     width: 150px;
 }
 
+
+/**************************
+**                       **
+**     helper styles     **
+**                       **
+**************************/
+
+.center {
+    text-align: center;
+}
