--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -426,7 +426,6 @@ input[type=submit] {
 }
 /* use this class on a submit button if you would like it to be big and red. */
 input[type=submit].bigred,
-a.bigred,
 form#login_form > fieldset > input[type=submit] {
     padding: 0;
     height: 50px;
@@ -561,3 +560,13 @@ table#servers th {
     width: 150px;
 }
 
+
+/**************************
+**                       **
+**     helper styles     **
+**                       **
+**************************/
+
+.center {
+    text-align: center;
+}
