--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -535,31 +535,34 @@ li.multiline > span {
 
 /**************************
 **                       **
-**      server page      **
+**      tabular data     **
+**    (currently only    **
+**      table#clans      **
+**   and table#servers)  **
 **                       **
 **************************/
-
+#clans,
 #servers {
+    width:100%;
     font-size: .9em;
 }
 /* specificity override for padding */
+table#clans th,
 table#servers th {
     text-align: left;
     border-bottom: 4px double #aaa;
     padding: 8px;
 }
+#clans th,
+#clans td,
 #servers th,
 #servers td {
     padding: 5px 8px;
-    width: 100px;
 }
+#clans tr,
 #servers tr {
     border-bottom: 1px solid #ccc;
 }
-#servers .server_name {
-    width: 150px;
-}
-
 
 /**************************
 **                       **
