Tweaking /clan/*name. .imagelink class used for trophy <a>s.

--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -65,6 +65,10 @@ a:hover {
     color: #800;
     text-decoration: underline;
 }
+a.active.imagelink, a.active.imagelink:hover,
+a.imagelink:hover {
+    text-decoration: none;
+}
 #footer,
 /* topnav */
 .text_content_wrapper, #topnav {
