--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -12,7 +12,7 @@
           %li#sightseeing
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
             %span
-              Sightseeing tour: finish a game in all variants (die or ascend)
+              Sightseeing tour: finish a game in all variants (die after 1000 turns or ascend)
             
           %li#globetrotter
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/globetrotter.png"}
