--- a/views/user.haml
+++ b/views/user.haml
@@ -22,6 +22,13 @@
         .text_content.non_top_post
             %h3
                 Trophies
+            - if @player.individualtrophies.count > 0
+                %li
+                    Individual
+                %p
+                    - for individualtrophy in @player.individualtrophies
+                        %a{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
+                            %img{:style => "width:5%;height:5%;", :src => "/icons/" + individualtrophy.icon}
             - unless @player.scoreentries.select{|entry| entry.variant == "3.6.0"}.empty?
                 %li
                     AceHack
