--- a/views/home.haml
+++ b/views/home.haml
@@ -82,6 +82,7 @@
                             %a{:title => $trophy_names[scoreentry.trophy], :href => "/trophies#" + scoreentry.icon[0 .. (scoreentry.icon.length - 5)]}
                                 %img{:style => "width:5%;height:5%;", :src => "/icons/" + scoreentry.icon}
         =haml :_user_games
+        =haml :games_played
         #clanmanager.text_content.non_top_post
             - for account in @user.accounts
                 .account-clan
