--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "application/xhtml+xml;charset=utf-8", "http-equiv" => "content-type"}/
     %link{:href => "/style-xiella.css", :rel => "stylesheet", :type => "text/css"}/
-    %title Junethack
+    %title= "Junethack - #{User.count} players registered - #{Game.count} games played!"
   %body
     #container
       #topnav.navigation
